Fixed issues with scrollbar

--- a/src/components/NewMenus/LeftMenu.scss
+++ b/src/components/NewMenus/LeftMenu.scss
@@ -92,7 +92,7 @@
 }
 
 .submenu-container {
-  max-height: 600px;
+  max-height: 450px;
   overflow: auto;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
